--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && rm build.tar.gz && tar cvjf build.tar.gz build/ && scp build.tar.gz daniel@danielazulay.eu:~ "
   },
   "eslintConfig": {
     "extends": [
